# ptg_biology

./: .pylintrc  LICENSE  README.md  config.py  example_notebook.ipynb  main.py  pipeline.py  requirements.txt  test.py
.ipynb_checkpoints/: example_notebook-checkpoint.ipynb
ptg_model/: core_functions.py  model.py  parameters.py  plot.py  pyproject.toml  simulation.py  utils.py
ptg_model/.ipynb_checkpoints/: model-checkpoint.py
tests/: conftest.py  pytest.ini  test_core_functions.py  test_model_deriv.py  test_utils_functions.py
