[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arm_pylint"
version = "0.1.0"
description = "Association Rule Mining on Python static analysis warnings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Anonymous"}]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "mlxtend>=0.23",
    "matplotlib>=3.7",
    "networkx>=3.1",
    "seaborn>=0.12",
    "gitpython>=3.1",
]

[project.scripts]
arm-pipeline = "src.pipeline:main"
